log
sá., 19 de mar. de 2022 21:13:45: 
 tests:  0|6
total_score: 0/70
5f02781
sá., 19 de mar. de 2022 21:14:58: 
 list.c | 40 ++++++++++++++++++++++++++++++++++------
 1 file changed, 34 insertions(+), 6 deletions(-)
In file included from test.c:5:0:
list.c: In function 'createNode':
list.c:24:3: error: unknown type name 'node'
   node* n=(node*)malloc(1,sizeof(Node));
   ^~~~
list.c:24:12: error: 'node' undeclared (first use in this function)
   node* n=(node*)malloc(1,sizeof(Node));
            ^~~~
list.c:24:12: note: each undeclared identifier is reported only once for each function it appears in
list.c:24:17: error: expected expression before ')' token
   node* n=(node*)malloc(1,sizeof(Node));
                 ^
list.c:25:4: error: request for member 'data' in something not a structure or union
   n->data=data;
    ^~
list.c:26:4: error: request for member 'next' in something not a structure or union
   n->next=NULL;
    ^~
list.c:28:10: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
   return n;
          ^
list.c: In function 'createList':
list.c:32:3: error: unknown type name 'list'
   list* l=(List*)malloc(1,sizeof(list));
   ^~~~
list.c:32:34: error: 'list' undeclared (first use in this function)
   list* l=(List*)malloc(1,sizeof(list));
                                  ^~~~
list.c:32:18: error: too many arguments to function 'malloc'
   list* l=(List*)malloc(1,sizeof(list));
                  ^~~~~~
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:485:40: note: declared here
 _CRTIMP __cdecl __MINGW_NOTHROW  void *malloc (size_t) __MINGW_ATTRIB_MALLOC;
                                        ^~~~~~
In file included from test.c:5:0:
list.c:32:11: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
   list* l=(List*)malloc(1,sizeof(list));
           ^
list.c:34:3: error: expected ';' before 'list'
   list->tail=NULL
   ^~~~
list.c:32:9: error: unused variable 'l' [-Werror=unused-variable]
   list* l=(List*)malloc(1,sizeof(list));
         ^
list.c: In function 'pushFront':
list.c:71:3: error: unknown type name 'node'
   node* n=createNode(data)
   ^~~~
list.c:71:11: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
   node* n=createNode(data)
           ^~~~~~~~~~
list.c:72:3: error: expected ',' or ';' before 'if'
   if(list->head==NULL){
   ^~
list.c:75:4: error: 'else' without a previous 'if'
   }else{
    ^~~~
list.c:76:6: error: request for member 'next' in something not a structure or union
     n->next = list->head;
      ^~
list.c:77:21: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     list->head->prev=n;
                     ^
list.c:79:13: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
   list->head=n;
             ^
list.c: In function 'createList':
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
ff18927
sá., 19 de mar. de 2022 21:16:09: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:32:3: error: unknown type name 'list'
   list* l=(List*)malloc(1,sizeof(list));
   ^~~~
list.c:32:34: error: 'list' undeclared (first use in this function)
   list* l=(List*)malloc(1,sizeof(list));
                                  ^~~~
list.c:32:34: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:18: error: too many arguments to function 'malloc'
   list* l=(List*)malloc(1,sizeof(list));
                  ^~~~~~
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:485:40: note: declared here
 _CRTIMP __cdecl __MINGW_NOTHROW  void *malloc (size_t) __MINGW_ATTRIB_MALLOC;
                                        ^~~~~~
In file included from test.c:5:0:
list.c:32:11: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
   list* l=(List*)malloc(1,sizeof(list));
           ^
list.c:34:3: error: expected ';' before 'list'
   list->tail=NULL
   ^~~~
list.c:32:9: error: unused variable 'l' [-Werror=unused-variable]
   list* l=(List*)malloc(1,sizeof(list));
         ^
list.c: In function 'pushFront':
list.c:71:3: error: unknown type name 'node'
   node* n=createNode(data)
   ^~~~
list.c:71:11: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
   node* n=createNode(data)
           ^~~~~~~~~~
list.c:72:3: error: expected ',' or ';' before 'if'
   if(list->head==NULL){
   ^~
list.c:75:4: error: 'else' without a previous 'if'
   }else{
    ^~~~
list.c:76:6: error: request for member 'next' in something not a structure or union
     n->next = list->head;
      ^~
list.c:77:21: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     list->head->prev=n;
                     ^
list.c:79:13: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
   list->head=n;
             ^
list.c: In function 'createList':
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
8c1b709
sá., 19 de mar. de 2022 21:18:04: 
 list.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  2|4
total_score: 20/70
ad581c8
sá., 19 de mar. de 2022 21:23:07: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 25/70
75466ca
sá., 19 de mar. de 2022 21:25:01: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|4
total_score: 25/70
8a6e595
sá., 19 de mar. de 2022 21:57:32: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
51dfc91
sá., 19 de mar. de 2022 21:59:07: 
 list.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  3|4
total_score: 25/70
a18dea4
sá., 19 de mar. de 2022 22:00:44: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
1966c81
sá., 19 de mar. de 2022 22:05:53: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|4
total_score: 25/70
63ec992
sá., 19 de mar. de 2022 22:06:43: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|4
total_score: 25/70
6ea51de
sá., 19 de mar. de 2022 22:07:07: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4bdd573
sá., 19 de mar. de 2022 22:12:51: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|4
total_score: 25/70
4d713b9
sá., 19 de mar. de 2022 22:13:39: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 25/70
4b90e9b
sá., 19 de mar. de 2022 22:15:25: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 25/70
0752526
sá., 19 de mar. de 2022 22:16:07: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
10b3439
sá., 19 de mar. de 2022 22:18:05: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
c31cd6b
sá., 19 de mar. de 2022 22:30:00: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
9955ee7
sá., 19 de mar. de 2022 22:30:31: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 25/70
c82d3e5
sá., 19 de mar. de 2022 22:34:19: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:50:22: error: format '%d' expects argument of type 'int', but argument 2 has type 'void *' [-Werror=format=]
     printf("\nnodo: %d\n",list->current->data);
                      ^
list.c:52:22: error: format '%d' expects argument of type 'int', but argument 2 has type 'void *' [-Werror=format=]
     printf("\nnodo: %d\n",list->current->data);
                      ^
cc1.exe: all warnings being treated as errors
Compilation failed
8beb922
sá., 19 de mar. de 2022 22:45:37: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  0|0
aba9a69
sá., 19 de mar. de 2022 22:51:36: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 35/70
89f39df
Sun Mar 20 17:21:50 UTC 2022: 
 tests:  6|3
total_score: 35/70
8b92a95
Sun Mar 20 17:22:17 UTC 2022: 
 list.c | 51 ++++++++++++++++++++++++++++++++++++++++++---------
 1 file changed, 42 insertions(+), 9 deletions(-)
 tests:  11|1
total_score: 55/70
c066278
Sun Mar 20 17:23:21 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
e92a339
